<resources>
    <string name="app_name">Dicoding Events by A014B4KY2223</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="event_image_desc">Image of the event</string>
    <string name="tv_dicoding_events">Dicoding Events</string>
    <string name="tv_finished_past_events">PAST EVENTS</string>
    <string name="tv_recommendation_events_for_you">RECOMMENDATION EVENTS FOR YOU</string>
    <string name="tv_finished_events">FINISHED EVENTS</string>
    <string name="tv_upcoming_recommendation">RECOMMENDATION EVENTS FOR YOU</string>
    <string name="btn_interested">I\'m Interested</string>
    <string name="text_remaining_quota">Remaining Quota</string>
    <string name="title_description">Event Description</string>
    <string name="hint_deskripsi">Deskripsi</string>
    <string name="hint_kuota">Quota</string>
    <string name="hint_date">Event Date</string>
    <string name="hint_owner">Owner</string>
    <string name="hint_nama_acara">Event Name</string>
    <string name="remaining_quota">%d</string>
    <string name="favorites_label">Favorites</string>
    <string name="tv_your_favorite_events">YOUR FAVORITE EVENTS</string>
    <string name="settings_title">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="quota">Quota :</string>
    <string name="date">Date :</string>
    <string name="owner">Owner :</string>
    <string name="favorite">Favorite</string>
</resources>