<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/baseline_upcoming_24"
        android:title="@string/title_upcoming" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_checklist_24"
        android:title="@string/title_finished" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites_label" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_display_settings"
        android:title="@string/settings_title" />

</menu>