<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_event_cover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/event_image_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_image_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_event_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/hint_nama_acara"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_event_cover" />

        <TextView
            android:id="@+id/text_owner_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/hint_owner"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvOwnerTitle"
            app:layout_constraintTop_toBottomOf="@id/text_event_name" />

        <TextView
            android:id="@+id/text_event_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/hint_date"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_owner_name"
            app:layout_constraintTop_toBottomOf="@id/text_owner_name" />

        <TextView
            android:id="@+id/text_quota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/hint_kuota"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_event_time"
            app:layout_constraintTop_toBottomOf="@id/text_event_time" />

        <TextView
            android:id="@+id/title_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:hint="@string/title_description"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_quota" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/hint_deskripsi"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_desc" />

        <Button
            android:id="@+id/button_open_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/btn_interested"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_description"
            app:layout_constraintVertical_bias="1.0" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="Favorite"
            android:focusable="true"
            android:src="@drawable/ic_favorite_border"
            app:layout_constraintBottom_toBottomOf="@+id/image_event_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_event_cover"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvOwnerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="Owner :"
            android:textColor="#000000"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/text_event_time"
            app:layout_constraintStart_toStartOf="@+id/text_event_name"
            app:layout_constraintTop_toBottomOf="@+id/text_event_name" />

        <TextView
            android:id="@+id/tvDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="Date     :"
            android:textColor="#000000"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/text_quota"
            app:layout_constraintStart_toStartOf="@+id/tvOwnerTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvOwnerTitle" />

        <TextView
            android:id="@+id/tvQuotaTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/inter_semibold"
            android:text="Quota  :"
            android:textColor="#000000"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/title_desc"
            app:layout_constraintStart_toStartOf="@+id/tvDateTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>